manifests/deployment.yaml
# This manifest is auto-generated from the helm chart, do not modify! 
# Source: amalthea/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amalthea
  labels:
    app.kubernetes.io/component: controller
    helm.sh/chart: amalthea-0.0.1-set.by.chartpress
    app.kubernetes.io/name: amalthea
    app.kubernetes.io/instance: amalthea
    app.kubernetes.io/version: "latest"
spec:
  # There must be only one instance of the kopf operator handling the
  # same custom resource object at a time.
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: amalthea
      app.kubernetes.io/instance: amalthea
  template:
    metadata:
      labels:
        app.kubernetes.io/component: controller
        app.kubernetes.io/name: amalthea
        app.kubernetes.io/instance: amalthea
    spec:
      serviceAccountName: amalthea
      securityContext:
        {}
      containers:
        - name: amalthea
          securityContext:
            {}
          image: "renku/amalthea:latest"
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 300
          args:
            - "--verbose"
            - "--log-format=json"
            - "--namespace=default"
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - name: config
              mountPath: /app/config
      volumes:
        - name: config
          configMap:
            name: amalthea-config
